--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -20,3 +20,88 @@ scope
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
+
+
+### 이론
+```jsp
+<!-- 
+	쿠키(Cookie)
+		웹 브라우저에 저장되는 작은 크기의 데이터
+		
+		용도
+			1) 서버와 클라이언트가 통신할때 하나의 요청에 대한 응답을 전송하고 나면
+				서로의 통신은 단절되어 정보를 지속적으로 공유할 수 없게 된다.
+				이런 특성을 stateless라고 한다.
+				
+			2) 하나의 클라이언트가 여러번 반복적으로 서버에 접속하더라도 서버에서는
+				이전 클라이언트와 동일한 클라이언트가 접속한 것인지 확인할 수가 없다.
+				
+		지속적의 유지를 위해 쿠키/세션을 사용한다.
+			1) 쿠키생성	:	웹서버와 브라우저 양쪽에 생성할 수 있다.
+					- 첫번째 요청(request)가 들어오면 쿠키를 생성하고
+						응답(response)에 쿠키를 보낸다.
+					- 그다음부터의 요청시마다 쿠키를 확인/공유한다.
+					
+			2) 쿠키저장	:	웹 브라우저는 쿠키를 클라이언트 컴퓨터 쿠키저장소에 저장한다.
+			3) 쿠키전송	:	
+					- 클라이언트	:	한번 저장된 쿠키를 매번 요청시 마다 
+									요청헤더에 포함해서 전송한다.
+					- 서버		:	전송받은 쿠키를 활용해서 필요한 작업을
+									지속해 나갈수 있고, 수행후 응답(response)
+									에 쿠키를 헤더에 넣어 보낸다.					
+			4) 쿠키구성	:	이름=값, 이름=값, 이름=값 ,,, 으로 저장
+						- 이름은 문자만 가능하다.
+			5) 쿠키의구성내용 : 유효시간, 경로지정, 도메인 지정을 할 수 있다.
+			6) 구현 : 
+					. 생성	:	new Cookies(이름, 값)와 같이 생성자를 활용 생성
+								- response.addCookie(쿠키) 클라이언트에 전송
+								- request.getCookiess() 다음 요청시 쿠키를 읽는다.
+					. 변경	:	같은 이름에 다른 값을 넣어서 다시 생성하면 된다.
+					. 삭제	:	유효시간을 0으로 설정하면 서버는 유효시간이 지난 쿠키는 자동 삭제처리한다.(setMaxAge(0))
+
+			7) 활용
+					. 유효시간이 종료되지 않은 상태라면.. 다른 페이지에서 공유할 수 있다.
+					. 로그인, 장바구니, 하루만 보여주기 창 등...에 활용된다.
+					
+			8) JSESSIONID?
+					- 톰캣 컨테이너에서 세션을 유지하기 위해 자동 발급되는 키
+					- 세션의 저장소를 생성할 때 사용하는 키
+					- 이후 해당 저장소에 다시 접근할때 사용된다.
+					- 동작순서
+						. 최초 접속시 톰캣은 헤더에 JSESSIONID 발급한다.
+						. 발급한 JSESSIONID는 쿠키에 저장된다.
+						. 만약 요청이 다시 발생하면, 톰캣은 저장된 JSESSIONID를
+							request헤더에 담아서 서버로 온다.
+						. 서버는 JSESSIONID를 토대로 세션 메모리 영역에 상태를 유지할 수
+							있는 값을 저장한다.
+ -->
+ 
+ <!-- 
+	session 객체
+		. 쿠키 : 데이터가 클라이언트에 저장되는 데이터라면
+		. 세션 : 서버(톰캣)에 저장되는 데이터이다.
+		
+		. 활용차이
+			- 세션 : 로그이니나 보안상 중요한 작업에 활용
+			- 쿠키 : .....활용
+
+		. 생성 : 클라이언트가 접속하면 자동으로 생성된다.
+				고유한 ID를 발생시킨다. >> 클라이언트에 전송
+				>> 세션ID로 접속
+				
+		. 특징 : 
+				. 각 클라이언트에게 고유한 ID
+				. 세션ID로 클라이언트를 구분해서 클라이언ㅌ의 요구에 맞기 서비스 제공
+				. 보안면에서 쿠키보다 우수
+				. 사용자가 많아질수록 서버의 메모리를 많이 차지하게 된다.
+				
+		. 메서드 :
+				. getId()
+				. getCreationTime() : 세션생성시간(밀리초)
+				. getLastAccessedTime() : 마지막 접근시간
+				. getMaxInterval(long) : 유효시간
+				. invalidate() : 세션삭제
+				
+				. getAttribute(), setAttribute()
+ -->
+```
