--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -105,3 +105,115 @@ scope
 				. getAttribute(), setAttribute()
  -->
 ```
+
+### cookie 이용해보기 jsp6_1~6_4
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<form action="jsp6_2.jsp">
+		<h3>로 그 인</h3>
+		아 이 디 : <input type="text" name="id"><br>
+		비밀번호: <input type="password" name="pw"><br><br>
+		<input type="submit" value="확인">
+	</form>
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		request.setCharacterEncoding("utf-8");
+		String id = request.getParameter("id");
+		String pw = request.getParameter("pw");
+		
+		if(id.equals("홍길동") && pw.equals("1234")){		// 회원체크
+			Cookie cookie = new Cookie("ID","ADMIN");	// 쿠키생성
+			response.addCookie(cookie);
+			
+			out.print("<h3>로그인되었습니다. 환영합니다!</h3>");
+			out.print("<a href='jsp6_3.jsp'>메인페이지로 이동</a>");
+		} else{
+			out.print("<h3>로그인 실패</h3>");
+			out.print("<a href='jsp6_1.jsp'>로그인가기</a>");
+		}
+		
+	%>
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		Cookie[] cookies = request.getCookies();
+		boolean isLogin = false;
+		
+		if(cookies != null && cookies.length>0){
+			for(int i=0; i<cookies.length;i++){
+				String cookie_name = cookies[i].getName();
+				String cookie_value = cookies[i].getValue();
+				
+				if(cookie_name.equals("ID") && cookie_value.equals("ADMIN")){
+					isLogin = true;
+					break;
+				}
+			}
+		}
+		if(isLogin){
+			out.print("<h2>로그인 상태입니다.....</h2>");
+		}else{
+			out.print("<h2>로그아웃 상태입니다!!!</h2>");
+		}
+	%>
+	
+	<a href="jsp6_4.jsp">로그아웃</a>
+	
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		Cookie cookie = new Cookie("ID","ADMIN");
+		cookie.setMaxAge(0);
+		response.addCookie(cookie);
+	
+	%>
+	<h3>로그아웃 되었습니다...</h3>
+	<a href="http://localhost:8080/Ch09/jsp6_1.jsp">로그인가기</a>
+</body>
+</html>
+```
