--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -103,6 +103,20 @@ scope
 				. invalidate() : 세션삭제
 				
 				. getAttribute(), setAttribute()
+				
+				. session="true" : 자동생성
+ -->
+ 
+ <!-- 
+	세션삭제
+		. invalidate()
+		. 더 이상 사용할 필요가 없을때 서버에 저장된 세션을 삭제한다.
+		. 세션과 함께 저장되어 있는 데이터정보가 삭제된다.
+		. 브라우저가 종료되면 세션도 삭제된다.
+		
+		. 삭제방법
+			1) invalidate()
+			2) 유효시간을 설정해서 자동삭제
  -->
 ```
 
@@ -214,6 +228,47 @@ scope
 	%>
 	<h3>로그아웃 되었습니다...</h3>
 	<a href="http://localhost:8080/Ch09/jsp6_1.jsp">로그인가기</a>
+</body>
+</html>
+```
+
+### session 설정
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8" session="true"%>
+<%
+	session.setAttribute("NAME", "홍길동");
+	session.setAttribute("ADDRESS", "서울");
+%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>세션에 값을 설정했습니다.<br>
+		<a href="jsp2_2.jsp">여기클릭!</a> 설정된 값을 확인 할 수 있습니다.
+	</h3>
+</body>
+</html>
+```
+
+```
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8" session="true"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>
+	NAME : <%=session.getAttribute("NAME")%><br>
+	ADDRES : <%=session.getAttribute("ADDRESS") %><br>
+	
+	</h3>
 </body>
 </html>
 ```
