--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -118,6 +118,41 @@ scope
 			1) invalidate()
 			2) 유효시간을 설정해서 자동삭제
  -->
+ 
+ <!-- 
+	EL(Expression Language) 표현언어
+		- 속성값들을 편리하게 출력하기 위해 제공된 언어이다.
+		- jsp스크립트를 대신해서 좀 더 편리하게 출력하기 위해 제공된 언어
+		- 문법
+			(%   %)	----- >	자바빈
+			(%=속성%)	>>>		{$표현식} 할 수 있다.
+		- 기능
+			. 변수와 연산자를 포함할 수 있다.
+			. jsp내장객체에 저장된 모든 속성과 자바빈 객체를 사용할 수 있다.
+			. 내장객체를 지원한다.
+			. 자료형은 정수, 실수, 문자열, 논리형, null이 있다.
+			
+		- 연산자
+			. . 속성이나 맵의 원소에 접근
+			. [] 배열이나 리스트의 원소에 접근
+			. () 우선순위 조정할떄 사용
+			. a? b:c	:	삼항연산자
+			. lt < (작다)와 같다
+			. gt > (크다)와 같다
+			. empty	null인지 체크할때 사용
+			. func(args) : 함수호출	
+			
+		- 표현언어용 지원하는 내장객체
+			. pageScope		:	pageContext
+			. requestScope	:	request
+			. sessionScope	:	session
+			. param[이름]		:	request.getParameter(이름)
+			. paramValues[이름] :	request.getParameterValues(이름)
+			
+		- Dispatcher클래스
+			. 서블릿쪽에서 forward, include 처리할 수 있다. (jsp에서도 사용)
+ -->
+ 
 ```
 
 ### cookie 이용해보기 jsp6_1~6_4
