--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -308,4 +308,142 @@ scope
 </html>
 ```
 
+### Servlet service Dispatcher 1
+```jsp
+package Servlet;
+import java.io.IOException;
+
+import javax.servlet.RequestDispatcher;
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+
+@WebServlet("/dispatcher")
+public class DispatcherTest extends HttpServlet{
+
+	private static final long serialVersionUID = -9094191998189343155L;
+	
+	@Override
+	protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+		request.setCharacterEncoding("utf-8");
+		request.setAttribute("name", "홍길동");
+		
+		RequestDispatcher dispatcher = request.getRequestDispatcher("/hello");
+		dispatcher.forward(request, response);
+	}
+}
+```
+
+```jsp
+package Servlet;
+
+import java.io.IOException;
+import java.io.PrintWriter;
+
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+@WebServlet("/hello")
+public class HelloServlet extends HttpServlet{
+	
+	private static final long serialVersionUID = -1515333017350598530L;
+
+	@Override
+	protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+		
+		// 출력
+		response.setContentType("text/html;charset=utf-8");
+		
+		PrintWriter out = response.getWriter();
+		
+		out.print("<html>");
+		out.print("<head><title>출력페이지</title></head>");
+		out.print("<body>");
+		out.print("<h3> 전달받은 데이터 : "+ request.getAttribute("name")+"님 환영!</h3>");
+		out.print("</body>");
+		out.print("</html>");
+	}
+
+}
+```
+
+### Servlet service Dispatcher 2
+```jsp
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>누적합계 구할 숫자를 입력하세요.</h3>
+	<form action="jsp1_2.jsp">
+		숫자 : <input type="number" name="num" required><br>
+		<input type="submit" value="계산">
+	</form>
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		int num = Integer.parseInt(request.getParameter("num"));
+		int sum = 0;
+		for(int i=1; i<=num; i++){
+			sum +=i;
+		}
+		
+		request.setAttribute("sum", sum);
+		
+		RequestDispatcher rd = request.getRequestDispatcher("jsp1_3.jsp");
+		
+		rd.forward(request, response);
+		
+	%>
+
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		int sum1 = (Integer)request.getAttribute("sum");
+	%>
+	
+	결과값 <%= sum1 %>
+	
+	<hr><br>
+	
+	결과값 : ${sum } <!-- request.getAttribute("sum") -->
+	
+</body>
+</html>
+```
+
+
+
 
