--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -289,7 +289,7 @@ scope
 </html>
 ```
 
-```
+```jsp
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8" session="true"%>
 <!DOCTYPE html>
