--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -309,7 +309,7 @@ scope
 ```
 
 ### Servlet service Dispatcher 1
-```jsp
+```java
 package Servlet;
 import java.io.IOException;
 
@@ -337,7 +337,7 @@ public class DispatcherTest extends HttpServlet{
 }
 ```
 
-```jsp
+```java
 package Servlet;
 
 import java.io.IOException;
