--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -464,5 +464,125 @@ public class HelloServlet extends HttpServlet{
 ```
 
 
+----------------------------------------------------------------------------------
+# 해보기
 
+```java
+package Servlet;
 
+public class Thermometer {
+	// HashMap<String,Double> 준비한다
+	
+	/*
+	 * set~() 에서 지역(String) 온도(Double)을 초기화한다. get~()
+	 * 
+	 * getFar(지역) 화씨 <= 섭씨
+	 */ // 섭씨를 화씨로 변환
+	
+	private String location;
+	private Double ondo;
+	
+	public String getLocation() {
+		return location;
+	}
+	public void setLocation(String location) {
+		this.location = location;
+	}
+	public Double getOndo() {
+		return ondo;
+	}
+	public void setOndo(Double ondo) {
+		this.ondo = ondo;
+	}
+	
+	public Double getFar() {
+		return (ondo*1.8)+32;
+	}
+	
+	
+}
+
+```
+
+```jsp
+<%@page import="java.util.HashMap"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+
+	Th2.jsp로 전송
+	지역 : 
+	온도 :
+	
+	<%
+		HashMap<String,Double> lo = new HashMap<>();
+		lo.put("서울", 36.5);
+		lo.put("뉴욕", 12.3);
+		lo.put("도쿄", 56.2);
+		
+		request.setAttribute("temper", lo);
+		
+		RequestDispatcher rd = request.getRequestDispatcher("Th2.jsp");
+		rd.forward(request, response);
+		
+	%>
+
+</body>
+</html>
+```
+
+```jsp
+<%@page import="Servlet.Thermometer"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+
+	 
+	 <%
+	 	Thermometer th = new Thermometer();
+	 
+	 	th.setLocation(request.getParameter("name"));
+	 
+	 %>
+	 
+	 <%= th.getLocation()+"의 온도는"+th.getOndo()+" 입니다." %>
+	 
+	 
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+<%-- 	방법1
+	스크립틀릿안에서 자바객체생성후 결과값을 setAttribute() 해놓는다.
+	
+	방법2
+	자바빈을 활용해서 속성값 설정해서 객체생성하여 setAttribute()
+	
+	출력
+	 방법1 : 표현식(%= %)
+	 방법2 : EL로 출력 ${} --%>
+</body>
+</html>
+```
