--- a/5월 3주차/5월 16일.MD
+++ b/5월 3주차/5월 16일.MD
@@ -21,7 +21,7 @@ scope
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
 
-### 지금까지 데이터변환
+### 지금까지 데이터변환한것들
 ```jsp
 <!-- 
 	(@include file="")
