--- a/5월 3주차/5월 17일.MD
+++ b/5월 3주차/5월 17일.MD
@@ -1,17 +1,41 @@
 # Review
-자바 빈(JavaBeans)
-- 자바빈 ? JSP에서 사용할 목적으로 사용자가 정의한 자바클래스를 의미한다.
-- 프리젠테이션 부분과 비즈니스로직 부분을 분리하기 위한 목적이다.
+Cookie
+```jsp
+Cookie cookie_name = new Cookie("name","value");
+  cookie.setMaxAge(60*60*24);
+  response.addCookie(cookie_name);
+  
+  Cookie[] cookies = request.getCookies();
+  if(cookies != null && cookies.length > 0){
+    for(int i=0; i<cookies.length; i++){
+      cookies[i].getName() + ":" + cookies[i].getValue()
+```
 
-자바 빈 설계규약
-- 자바빈 클래스에 생성자를 넣으려면 파라미터가 없는 기본생성자를 반드시 포함해둬야한다.
-- 자바빈 클래스의 모든 속성에 대해 getter, setter메서드를 정의해야 한다.
+Session   session="true"
+```jsp
+HttpSession httpSession = request.getSession();
+httpSession.getID() == session.getId()          (JSESSIONID)
 
-scope
-- page : 디폴트, 현재 JSP페이지 -> 페이지 바뀌면 객체 사라짐
-- request : request 최종 포워딩되는 페이지까지
-- session : session 내장 객체가 유지될 때까지 -> 모든 JSP페이지에서 자바빈 객체 공유
-- application : 웹 컨테이너가 종료될 때까지 -> 현재 실행중인 모든 JSP페이지에서 공유
+session.setAttribute("name","value");
+session.setMaxInactiveInterval(60*30);
+
+session.setMaxInactiveInterval(60*30);
+session.invalidate();
+```
+
+EL
+```jsp
+  ${param.name}  <<< <%= request.getParameter(name) %>
+  ${paramValues.name[i] <<< request.getParameterValues(name)
+```
+
+RequestDispatcher
+```jsp
+  String path = "경로"
+  RequestDispatcher dispatcher = request.getRequestDispatcher(path);
+  dispatcher.forward() / dispatcher.include()
+```
+
 
 -----------------------------------------------------
 
@@ -20,3 +44,15 @@ scope
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
+- ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해 놓는다.
+- HTML페이지 -> 동적문서일 경우 JSP페이지로 전환한다.
+- Header와 Footer는 별도의 페이지로 모듈화하여 구현해 놓는다.
+- 로그인을 구현해 놓는다.
+- JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
+
+
+
+
+
+
+
