--- a/5월 3주차/5월 17일.MD
+++ b/5월 3주차/5월 17일.MD
@@ -50,7 +50,9 @@ RequestDispatcher
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 
-
+- https://downloads.mysql.com/archives/c-j/
+- mysql-connecto-java-5.1.48-bin.jar 자바lib에 넣기
+- tomcat lib에도 넣기
 
 
 
