--- a/5월 3주차/5월 17일.MD
+++ b/5월 3주차/5월 17일.MD
@@ -55,6 +55,14 @@ RequestDispatcher
 - https://downloads.mysql.com/archives/c-j/
 - mysql-connecto-java-5.1.48-bin.jar 자바lib에 넣기
 - tomcat lib에도 넣기
+- 아래 Data Source Explorer에서 2번쨰꺼 넣기
+
+
+
+
+
+
+
 
 
 
