--- a/5월 3주차/5월 17일.MD
+++ b/5월 3주차/5월 17일.MD
@@ -58,12 +58,277 @@ RequestDispatcher
 - 아래 Data Source Explorer에서 2번쨰꺼 넣기
 
 
+### jsp mysql 연동
+- mysql 
+```mysql
+show databases;
+
+
+use testdb;
 
 
 
+show table;
 
+select * from 학생;
 
+create table members(
+	id char(10) not null,
+	pw varchar(10) not null,
+	name varchar(15) not null,
+	phone varchar(20),
+	address varchar(50)
+);
 
+desc members;
+
+select *
+from members;
+
+drop table members;
+
+insert into members values('2018001', '1234','김진호','010-1111-1111','영등포');
+insert into members values('2018002', '2345','김진호','010-2222-1111','성동구');
+insert into members values('2018003', '3456','김진호','010-3333-1111','광진구');
+insert into members values('2018004', '4567','김진호','010-4444-1111','동대문');
+insert into members values('2018005', '5678','김진호','010-5555-1111','서대문');
+insert into members values('2018006', '6789','김진호','010-6666-1111','남대문');
+insert into members values('2018007', '7890','김진호','010-7777-1111','마포구');
+insert into members values('2018008', '1257','김진호','010-8888-1111','은평구');
+insert into members values('2018009', '1234','김진호','010-9999-1111','도봉구');
+insert into members values('2018010', '1234','김진호','010-0000-1111','강남구');
+
+create table goodsinfo(
+	code char(10) not null primary key,
+	title varchar(50) not null,
+	writer varchar(20) not null,
+	price int not null
+);
+
+desc goodsinfo;
+
+insert into goodsinfo (code,title,writer,price)
+	values
+	('1001','자바프로그래밍','홍길동',28000),
+	('1002','HTML프로그래밍','김길동',20000),
+	('1003','CSS프로그래밍','강길동',23000),
+	('1004','JQUERY프로그래밍','권길동',38000),
+	('1005','JSP','이길동',18000);
+
+select *
+from goodsinfo
+```
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style type="text/css">
+	
+	table{
+		border-collapse: collapse;
+		padding: 1px;
+	}
+	
+	input {
+		border: none;
+		text-align: center;
+	}
+	
+	input:focus{
+		outline: none;
+		background-color: lightgray;
+	}
+	
+	td #btn{
+		background-color: lightgray;
+		height: 5px;
+		text-align: center;
+		box-shadow: 1px 1px gray;
+	}
+	
+	td {
+		height: 5px;
+		text-align: center;
+	}
+	
+</style>
+</head>
+<body>
+	<h3>회원가입</h3>
+	<form action="jsp5_3.jsp" method="post">
+		<table border="1">
+			<tr>
+				<th>아 이 디</th>
+				<td><input type="text" name="id"></td>
+			</tr>
+			<tr>
+				<th>비밀번호</th>
+				<td><input type="password" name="pw"></td>
+			</tr>
+			<tr>
+				<th>이 름</th>
+				<td><input type="text" name="name"></td>
+			</tr>
+			<tr>
+				<th>전화번호</th>
+				<td><input type="text" name="phone"></td>
+			</tr>
+			<tr>
+				<th>주 소</th>
+				<td><input type="text" name="address"></td>
+			</tr>
+			
+			<tr>
+				<td id="btn" colspan="2">
+					<input type="submit" value="등록">&nbsp;&nbsp;
+					<input type="reset" value="취소">
+				</td>
+			</tr>
+			
+		</table>
+	</form>
+</body>
+</html>
+```
+
+```jsp
+<%@page import="java.sql.DriverManager"%>
+<%@page import="java.sql.Statement"%>
+<%@page import="java.sql.Connection"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		request.setCharacterEncoding("utf-8");
+	
+		String id = request.getParameter("id");
+		String pw = request.getParameter("pw");
+		String name = request.getParameter("name");
+		String phone = request.getParameter("phone");
+		String address = request.getParameter("address");
+		
+		String url = "jdbc:mysql://localhost:3306/myschool";
+		String user = "root";
+		String pw1 = "mysql";
+		
+		Connection conn = null;
+		Statement stmt = null;
+		
+		int res = 0;
+		String query =
+				"insert into members values('"+
+					id+"','"+pw+"','"+name+"','"+phone+"','"+address+"')";
+		
+		try{
+			Class.forName("com.mysql.jdbc.Driver");
+			conn = DriverManager.getConnection(url, user, pw1);
+			
+			stmt = conn.createStatement();
+			res = stmt.executeUpdate(query);
+			
+			out.print(res+" 입력이 성공하였습니다.");
+			
+		}catch(Exception e){
+			out.print(e);
+		}finally{
+			if(conn != null){
+				conn.close();
+			}
+			if(stmt != null){
+				stmt.close();
+			}
+		}
+	%>
+	
+	<br>
+	<a href="jsp2.jsp">확인하러 가기</a>
+	
+</body>
+</html>
+```
+
+```jsp
+<%@page import="java.sql.PreparedStatement"%>
+<%@page import="java.sql.DriverManager"%>
+<%@page import="java.sql.Statement"%>
+<%@page import="java.sql.Connection"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		request.setCharacterEncoding("utf-8");
+	
+		String id = request.getParameter("id");
+		String pw = request.getParameter("pw");
+		String name = request.getParameter("name");
+		String phone = request.getParameter("phone");
+		String address = request.getParameter("address");
+		
+		String url = "jdbc:mysql://localhost:3306/myschool";
+		String user = "root";
+		String pw1 = "mysql";
+		
+		Connection conn = null;
+		Statement stmt = null;
+		
+		int res = 0;
+		/* String query =
+				"insert into members values('"+
+					id+"','"+pw+"','"+name+"','"+phone+"','"+address+"')"; */
+		String query = "insert into members values (?,?,?,?,?)";
+		
+		try{
+			Class.forName("com.mysql.jdbc.Driver");
+			conn = DriverManager.getConnection(url, user, pw1);
+			
+			//stmt = conn.createStatement();
+			//res = stmt.executeUpdate(query);
+			
+			PreparedStatement pstmt = conn.prepareStatement(query);
+				pstmt.setString(1, id);
+				pstmt.setString(2, pw);
+				pstmt.setString(3, name);
+				pstmt.setString(4, phone);
+				pstmt.setString(5, address);
+				
+			res = pstmt.executeUpdate();
+			if(res>0){
+				out.print(res+" 입력이 성공하였습니다.");
+			}
+			
+		}catch(Exception e){
+			out.print(e);
+		}finally{
+			if(conn != null){
+				conn.close();
+			}
+			if(stmt != null){
+				stmt.close();
+			}
+		}
+	%>
+	
+	<br>
+	<a href="jsp2.jsp">확인하러 가기</a>
+	
+</body>
+</html>
+```
 
 
 
