--- a/5월 3주차/5월 17일.MD
+++ b/5월 3주차/5월 17일.MD
@@ -331,5 +331,181 @@ from goodsinfo
 ```
 
 
+# DB 데이터 조회할떄
+```jsp
+<%@page import="java.sql.DriverManager"%>
+<%@page import="java.sql.ResultSet"%>
+<%@page import="java.sql.Statement"%>
+<%@page import="java.sql.Connection"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style type="text/css">
+	#first{
+		background-color: #DEB887;
+	}
+	
+	table{
+		font-size: 12px;
+		text-align: center;
+		width: 500px;
+		height: 400px;
+		border: 1px;
+		border-collapse: collapse;
+		background-color : lightyellow;
+		box-shadow: 1px 1px 3px blue;
+	}
+	
+</style>
+</head>
+<body>
+	<table border="1" class="table">
+		<tr id="first">
+			<th>아이디</th>
+			<th>비밀번호</th>
+			<th>이름</th>
+			<th>전화번호</th>
+			<th>주소</th>
+		</tr>
+		<%
+			Connection conn = null;
+			/* Statement stmt = null;
+			ResultSet rs = null; */
+			
+			String url = "jdbc:mysql://localhost:3306/myschool";
+			String user = "root";
+			String pw = "mysql";
+			
+			try{
+				Class.forName("com.mysql.jdbc.Driver");
+				conn = DriverManager.getConnection(url, user, pw);
+				
+				Statement stmt = conn.createStatement();
+				ResultSet rs = stmt.executeQuery("select * from members;");
+				
+				out.print("<h2>회원명부</h2>");
+				
+				while(rs.next()){
+					out.print("<tr><td>"+rs.getString("id")+"</td>");
+					out.print("<td>"+rs.getString("pw")+"</td>");
+					out.print("<td>"+rs.getString("name")+"</td>");
+					out.print("<td>"+rs.getString("phone")+"</td>");
+					out.print("<td>"+rs.getString("address")+"</td>");
+				}
+				
+			}catch(Exception e){
+				e.getMessage();
+			}finally{
+				conn.close();
+			}
+		%>
+	</table>
+</body>
+</html>
+```
 
+# 회원가입할때 사용하면 될것같다. 위위에꺼 table 보면서 섞으면 될듯
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script type="text/javascript">
+	function chk(){
+		if(!frm.code.value){
+			alert("코드를 입력해 주세요!");
+			frm.code.focus;
+			return false;
+		}
+		if(isNaN(frm.code.value)){
+			alert("숫자를 입력바랍니다!");
+			frm.code.focus();
+			return false;
+		}
+		return true;
+	}
+</script>
+</head>
+<body>
+	<h3>상품코드 조회</h3>
+	<form action="jsp6_2DBLogic.jsp" name="frm" onsubmit="return chk()">
+		코드 : <input type="text" name="code"><p>
+		<input type="submit" value="조회">
+	</form>
+</body>
+</html>
+```
 
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8" errorPage="DBError.jsp"%>
+<%@ page import="java.io.*, java.sql.*" %>
+<%
+	request.setCharacterEncoding("utf-8");
+
+	String code = request.getParameter("code");
+	
+	Class.forName("com.mysql.jdbc.Driver");
+	Connection conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/myschool","root","mysql");
+	
+	Statement stmt = conn.createStatement();
+	ResultSet rs = stmt.executeQuery(
+				"select * from goodsinfo where code='"+code+"'"
+			);
+	while(rs.next()){
+		String title = rs.getString("title");
+		String writer = rs.getString("writer");
+		int price = rs.getInt("price");
+		
+		request.setAttribute("CODE", code);
+		request.setAttribute("TITLE", title);
+		request.setAttribute("WRITE", writer);
+		request.setAttribute("PRICE", price);
+		
+		RequestDispatcher dispatcher =
+				request.getRequestDispatcher("jsp6_3ResultView.jsp");
+		
+		dispatcher.forward(request, response);
+		
+		conn.close();
+		stmt.close();
+		
+	}
+%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+
+</body>
+</html>
+```
+
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>상품정보</h3>
+	코드 : ${CODE }<br>
+	제목 : ${TITLE }<br>
+	저자 : ${WRITER }<br>
+	가격 : ${PRICE }원<br>
+</body>
+</html>
+```
