--- a/5월 3주차/5월 18일.MD
+++ b/5월 3주차/5월 18일.MD
@@ -1,46 +1,12 @@
 # Review
-Cookie
-```jsp
-Cookie cookie_name = new Cookie("name","value");
-  cookie.setMaxAge(60*60*24);
-  response.addCookie(cookie_name);
-  
-  Cookie[] cookies = request.getCookies();
-  if(cookies != null && cookies.length > 0){
-    for(int i=0; i<cookies.length; i++){
-      cookies[i].getName() + ":" + cookies[i].getValue()
-```
-
-Session   session="true"
-```jsp
-HttpSession httpSession = request.getSession();
-httpSession.getID() == session.getId()          (JSESSIONID)
-
-session.setAttribute("name","value");
-session.setMaxInactiveInterval(60*30);
-
-session.setMaxInactiveInterval(60*30);
-session.invalidate();
-```
-
-EL
-```jsp
-  ${param.name}  <<< <%= request.getParameter(name) %>
-  ${paramValues.name[i] <<< request.getParameterValues(name)
-```
-
-RequestDispatcher
-```jsp
-  String path = "경로"
-  RequestDispatcher dispatcher = request.getRequestDispatcher(path);
-  dispatcher.forward() / dispatcher.include()
-```
+코드로 보기
 
 
 -----------------------------------------------------
 
 ## 학습목표
-- jsp
+- Database CRUD를 구현할 수 있다.
+- MVC 모델에 대해 이해하고 구현할 수 있다.
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
