--- a/5월 3주차/5월 18일.MD
+++ b/5월 3주차/5월 18일.MD
@@ -16,5 +16,334 @@
 - 로그인을 구현해 놓는다.
 - JSP종료 후 1차 포트폴리오 완성 >> 발표(평가) >> Spring학습
 
----------------------------------------------------------------
+--------------------------------------------------------------
 
+## 회원수정하기, mysql testdb
+
+#### 자바코드
+- 패키지에 들
+```java
+package dbconnection;
+
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.SQLException;
+
+public class Database {
+	private String url = "jdbc:mysql://localhost:3306/testdb";
+	private String user = "root";
+	private String password = "mysql";
+	
+	Connection conn;
+	
+	
+	public Database() throws SQLException,ClassNotFoundException{
+		Class.forName("com.mysql.jdbc.Driver");
+		conn = DriverManager.getConnection(url, user, password);
+	}
+	
+	public String getUrl() {
+		return url;
+	}
+
+	public void setUrl(String url) {
+		this.url = url;
+	}
+
+	public String getUser() {
+		return user;
+	}
+
+	public void setUser(String user) {
+		this.user = user;
+	}
+
+	public String getPassword() {
+		return password;
+	}
+
+	public void setPassword(String password) {
+		this.password = password;
+	}
+
+	public Connection getConn() {
+		return conn;
+	}
+
+	public void setConn(Connection conn) {
+		this.conn = conn;
+	}
+	
+}
+
+```
+
+#### 1
+```jsp
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>학생정보검색</h3>
+	<br>
+	<form action="jsp7_2.jsp" method="get">
+		<label for="c">학생코드</label>
+		<input type="text" id="c" name="code" required="required"><br><br>
+		<input type="submit" value="전송">
+	</form>
+	
+	
+</body>
+</html>
+```
+
+#### 2
+```jsp
+<%@page import="java.sql.ResultSet"%>
+<%@page import="java.sql.Statement"%>
+<%@page import="java.sql.Connection"%>
+<%@page import="dbconnection.Database"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8" errorPage="/error/dberror.html"%>
+<%
+	request.setCharacterEncoding("utf-8");
+	String code = request.getParameter("code");
+	
+	Database db = new Database();
+	
+	Connection conn = db.getConn();
+	
+	Statement stmt = conn.createStatement();
+	ResultSet rs = stmt.executeQuery("select * from 학생 where 학생번호='"+code+"';");
+	
+	try{
+		while(rs.next()){
+			String department	= rs.getString("소속학과");
+			String name			= rs.getString("학생이름");
+			int grade			= rs.getInt("학년");
+			String gender		= rs.getString("성별");
+			int age				= rs.getInt("나이");
+			String phone		= rs.getString("전화번호");
+			String address		= rs.getString("주소");
+			
+			request.setAttribute("CODE", code);
+			request.setAttribute("DEPT", department);
+			request.setAttribute("NAME", name);
+			request.setAttribute("GRADE", grade);
+			request.setAttribute("GENDER", gender);
+			request.setAttribute("AGE", age);
+			request.setAttribute("PHONE", phone);
+			request.setAttribute("ADDRESS", address);
+			
+			
+		}
+	} catch(Exception e){
+		out.print(e.getMessage());
+	}finally{
+		try{
+			if(stmt != null){
+				stmt.close();
+			}
+			if(conn != null){
+				conn.close();
+			}
+			
+		}catch(Exception e){}
+	}
+	
+	RequestDispatcher dispatcher = request.getRequestDispatcher("jsp7_3.jsp");
+	dispatcher.forward(request, response);
+	
+ %>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+
+</body>
+</html>
+```
+
+### 3
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style type="text/css">
+	
+	table {
+		background-color: #f6ffcc;
+		border-collapse: collapse;
+	}
+	input{
+		border: none;
+	}
+	input:hover{
+		outline: none;
+	}
+	
+	td{
+		background: white;
+		text-align: center;
+	}
+	
+	#ss:hover{
+		background-color: burlywood;
+	}
+	
+</style>
+</head>
+<body>
+
+	<h3>학생정보</h3>
+	<form action="jsp7_4.jsp">
+		<table border="1">
+			<tr>
+				<th>학생정보</th><td><input type="text" name="code" value="${CODE }"></td>
+			</tr>
+			
+			<tr>
+				<th>소속학과</th><td><input type="text" name="dept" value="${DEPT }"></td>
+			</tr>
+			
+			<tr>
+				<th>학생이름</th><td><input type="text" name="name" value="${NAME }"></td>
+			</tr>
+			
+			<tr>
+				<th>학      년</th><td><input type="text" name="grade" value="${GRADE }"></td>
+			</tr>
+			
+			<tr>
+				<th>성      별</th><td><input type="text" name="gender" value="${GENDER }"></td>
+			</tr>
+			
+			<tr>
+				<th>나      이</th><td><input type="text" name="age" value="${AGE }"></td>
+			</tr>
+			
+			<tr>
+				<th>전화번호</th><td><input type="text" name="phone" value="${PHONE }"></td>
+			</tr>
+			
+			<tr>
+				<th>주      소</th><td><input type="text" name="address" value="${ADDRESS }"></td>
+			</tr>
+			
+			<tr>
+				<td colspan="2">
+					<input type="submit" value="수정" id="ss">&nbsp;&nbsp;
+					<input type="reset" value="취소" id="ss">
+				</td>
+			</tr>
+			
+		</table>
+		<p>정보를 수정하시려면 내용을 수정후 수정버튼을 클릭바랍니다.</p>
+	</form>
+
+</body>
+</html>
+```
+
+#### 4
+```jsp
+<%@page import="java.sql.ResultSet"%>
+<%@page import="java.sql.Statement"%>
+<%@page import="java.sql.Connection"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8" import="dbconnection.Database"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		request.setCharacterEncoding("utf-8");
+	
+		String code = request.getParameter("code");
+		String dept = request.getParameter("dept");
+		String name = request.getParameter("name");
+		String grade = request.getParameter("grade");
+		String gender = request.getParameter("gender");
+		String age = request.getParameter("age");
+		String phone = request.getParameter("phone");
+		String address = request.getParameter("address");
+		
+		Database db = new Database();
+		Connection conn = db.getConn();
+		
+		Statement stmt = conn.createStatement();
+		
+		try{
+			int res = stmt.executeUpdate(
+					"update 학생 set 소속학과='"+dept+"',학생이름='"+name+"',학년='"+grade+"',성별='"+gender+"',나이='"+age+"',전화번호='"+phone+"',주소='"+address+"' where 학생번호 = '"+code+"'"
+					
+			);
+			
+			if(res<1){
+				out.print("수정되지 않았습니다.");
+			}else{
+				out.print("수정되었습니다.");
+			}
+			
+		}catch(Exception e){
+			out.print(e.getMessage());
+		}finally{
+			try{
+				if(stmt != null){
+					stmt.close();
+				}
+				if(conn != null){
+					conn.close();
+				}
+			}catch(Exception e){}
+		}
+		
+		
+		RequestDispatcher dispatcher = request.getRequestDispatcher("jsp7_5.jsp");
+		dispatcher.forward(request, response);
+		
+		
+	%>
+</body>
+</html>
+```
+
+#### 5
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<%
+		request.setCharacterEncoding("utf-8");
+		String code = request.getParameter("code");
+	
+	%>
+	
+	<form action="">
+		<h3>데이터가 수정되었습니다. 수정내용은 아래를 클릭해주세요.</h3>
+		<a href="jsp7_2.jsp?code=${param.code}">학생수정조회</a>
+	
+	</form>
+	
+</body>
+</html>
+```
