--- a/5월 3주차/5월 18일.MD
+++ b/5월 3주차/5월 18일.MD
@@ -347,3 +347,253 @@ public class Database {
 </body>
 </html>
 ```
+
+
+----------------------------------
+# MVC연습
+
+## C
+```java
+package controller2;
+
+import java.io.IOException;
+
+import javax.servlet.RequestDispatcher;
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+@WebServlet("/CommandProcessor2")
+public class CommandProcessor2 extends HttpServlet{
+
+	private static final long serialVersionUID = -2329195287854905127L;
+	
+	@Override
+	protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+		
+		req.setCharacterEncoding("utf-8");
+		String cmd = req.getParameter("cmd");
+		
+		model2.CommandProcessor2 processor2 = null;
+		
+		String view = null;
+		
+		if(cmd == null) {
+			processor2 = new model2.Member_null2();
+		}else if(cmd.equals("info2")) {
+			processor2 = new model2.Member_info2();
+		}else if(cmd.equals("login2")) {
+			processor2 = new model2.Member_login2();
+		}else if(cmd.equals("register2")) {
+			processor2 = new model2.Member_register2();
+		}
+		
+		try {
+			view = processor2.process(req, resp);
+			
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+		RequestDispatcher rd = req.getRequestDispatcher(view);
+		
+		rd.forward(req, resp);
+		
+	}
+	
+	
+
+}
+
+```
+
+## db
+```java
+package dbconnection2;
+
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.SQLException;
+
+public class Database2 {
+
+	private String url = "jdbc:mysql://localhost:3306/testdb";
+	public String getUrl() {
+		return url;
+	}
+
+	public void setUrl(String url) {
+		this.url = url;
+	}
+
+	public String getUser() {
+		return user;
+	}
+
+	public void setUser(String user) {
+		this.user = user;
+	}
+
+	public String getPassword() {
+		return password;
+	}
+
+	public void setPassword(String password) {
+		this.password = password;
+	}
+
+	public Connection getConn() {
+		return conn;
+	}
+
+	public void setConn(Connection conn) {
+		this.conn = conn;
+	}
+
+	private String user = "root";
+	private String password = "mysql";
+	
+	Connection conn;
+	
+	public Database2() throws SQLException,ClassNotFoundException{
+		
+		Class.forName("com.mysql.jdbc.Driver");
+		conn = DriverManager.getConnection(url, user, password);
+		
+	}
+	
+	
+	
+}
+
+```
+
+## model
+### interface
+```java
+package model2;
+
+import java.sql.SQLException;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+public interface CommandProcessor2 {
+	
+	public String process(HttpServletRequest request, HttpServletResponse response) throws ClassNotFoundException, SQLException;
+
+}
+
+```
+
+### model info
+```java
+package model2;
+
+import java.sql.Connection;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.sql.Statement;
+import java.util.ArrayList;
+import java.util.List;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+import dbconnection2.Database2;
+
+public class Member_info2 implements CommandProcessor2 {
+
+	@Override
+	public String process(HttpServletRequest request, HttpServletResponse response)
+			throws ClassNotFoundException, SQLException {
+		
+		Database2 db2 = new Database2();
+		Connection conn = db2.getConn();
+		
+		Statement stmt = conn.createStatement();
+		ResultSet rs = stmt.executeQuery("select * from 학생;");
+		
+		List<String> studentCodes = new ArrayList<String>();
+		List<String> ageCodes = new ArrayList<String>();
+		
+		try {
+			
+			while(rs.next()) {
+				
+				studentCodes.add(rs.getString("학생번호"));
+				ageCodes.add(rs.getString("나이"));
+		
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+		} finally {
+			try {
+				if(stmt != null) {
+					stmt.close();
+				}
+				if(conn != null) {
+					conn.close();
+				}
+			}catch (Exception e) {
+			}
+		}
+		
+		request.setAttribute("studentCodes", studentCodes);
+		request.setAttribute("ageCodes", ageCodes);
+		
+		return "/view2/member_info2.jsp";
+		
+	}
+
+}
+
+```
+
+## view
+```jsp
+<%@page import="java.util.List"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+    <h1>회원정보 페이지</h1>
+    
+    <table border="1" class="table">
+        <tr id="first">
+            <th>학생번호</th>
+            <th>나이</th>
+        </tr>
+        
+        <% 
+            List<String> studentCodes = (List<String>) request.getAttribute("studentCodes");
+        	List<String> ageCodes = (List<String>) request.getAttribute("ageCodes");
+        
+            if(studentCodes != null && ageCodes != null &&  studentCodes.size() == ageCodes.size()){
+            	for(int i=0; i< studentCodes.size(); i++){
+            		String studentCode = studentCodes.get(i);
+            		String ageCode = ageCodes.get(i);
+        %>
+        
+
+        <tr>
+            <td><%= studentCode %></td>
+            <td><%= ageCode %></td>
+        </tr>
+        <% 
+                }
+            }
+        %>
+        
+    </table>
+    
+</body>
+</html>
+
+```
