--- a/5월 3주차/5월 19일.MD
+++ b/5월 3주차/5월 19일.MD
@@ -5,7 +5,7 @@
 - Controller : 사용자와의 인터페이스, 전체 프로그램의 흐름제어 담당
 
 
-분리함으로써 <U>유지보수</U> 와 <U>코드 재사용</U> 을 쉽게 하기 위해 만들어진 디자인 패턴이다.
+분리함으로써 _유지보수_ 와 _코드 재사용_ 을 쉽게 하기 위해 만들어진 디자인 패턴이다.
 
 ### 구조
 ```
