--- a/5월 3주차/5월 19일.MD
+++ b/5월 3주차/5월 19일.MD
@@ -21,8 +21,10 @@
 -----------------------------------------------------
 
 ## 학습목표
-- Database CRUD를 구현할 수 있다.
-- MVC 모델에 대해 이해하고 구현할 수 있다.
+- DAO(Data Access Object) : 데이터베이스 접근객체 - CRUD클래스
+- DTO(Data Transfer Object) : 데이터변환하기 위한 객체 - 자바빈
+- VO(Value Object) : 값 자체의미를 갖는 getter~ 만 가지고 있는 고정값의 객체
+- ***프로젝트 실습을 통한 완벽한 CRUD를 구현할 수 있다.***  ( DTO/DAO 구현 및 활용을 할 수 있다.)
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
@@ -34,4 +36,4 @@
 
 --------------------------------------------------------------
 
-## 회원수정하기, mysql testdb
+
